# learning

./: README.md
0test/hello_world/: main.cpp
1white/: 1_1.cpp  1_2.cpp  1_4.cpp  1_6.cpp  1_7.cpp  1_9.cpp  2_15_kolichiestvo-unikal-nykh-strok.cpp  2_16_mnozhiestvo-znachienii-slovaria.cpp  2_1_factorial.cpp  2_2_palindrom.cpp  2_6_razvorot-posliedovatiel-nosti.cpp  2_8_sriedniaia-tiempieratura.cpp  2_9_ochieried.cpp  3_1_sortirovka-tsielykh-chisiel-po-moduliu.cpp  3_3_otsortirovannyie-stroki.cpp  3_5_imiena-i-familii-2.cpp  3_7_imiena-i-familii-3.cpp  4_2_obratimaia-funktsiia.cpp  4_3_obratimaia-funktsiia-s-umnozhieniiem-i-dielieniiem.cpp  4_5_vyvod-s-tochnost-iu.cpp  4_6_chtieniie-i-vyvod-tablitsy.cpp  4_8_klass-rational_1.cpp  4_8_klass-rational_4.cpp  4_8_klass-rational_5.cpp  4_9_funktsiia-ensureequal.cpp
2yellow/: 1_2_sriedniaia-tiempieratura-2.cpp  1_3_massa-blokov.cpp  2_2_tiesty-dlia-funktsii-getdistinctrealrootcount.cpp  2_4_tiesty-dlia-klassa-rational.cpp  2_5_tiesty-dlia-funktsii-ispalindrom.cpp  3_1.cpp  4_10_gruppirovka-strok-po-priefiksu.cpp  4_11_postroieniie-arifmietichieskogho-vyrazhieniia.cpp  4_1_chast-viektora.cpp  4_2_chast-mnozhiestva.cpp  4_7_sortirovka-sliianiiem_1.cpp  4_quiz_test.cpp
2yellow/2_1_diekompozitsiia-proghrammy/: starter.cpp
2yellow/3_2/: CMakeLists.txt  phone_number.cpp  test_runner.cpp  test_runner.h
2yellow/3_4/: query.h  responses.cpp  responses.h
2yellow/6_final/: command.cpp  command.h  main.cpp  node.cpp  node.h  test_runner.h  tests.cpp
3red/: test_runner.h  util.h
3red/final_1/: CMakeLists.txt  index.cpp  search_server.h  string_util.h
3red/week1/: 1_1_max_element_if.cpp  1_2_makros-log.cpp  1_3_sort_by.cpp  1_4_update_field.cpp  1_5_print_values.cpp  1_6__uniq_id.cpp  1_9_paginator.cpp
3red/week2/: 2_4_eliektronnaia-knigha.cpp  2_5_sistiema-bronirovaniia-otieliei.cpp
3red/week3/: 3_1_object_pool.cpp  3_2_swap_sort_copy.cpp  3_3_simple_vector.cpp  3_3_simple_vector.h  3_4_linked_list.cpp
3red/week4/: 4_2_stack_vector.cpp  4_2_stack_vector.h  4_3_translator.cpp  4_4_airport_counter.cpp
3red/week4_webserver/: http_request.h  profile.h  stats.cpp
3red/week5/: 5_11_concurrent_map.cpp  5_5_simple_vector_2.h  5_9__explore_key_words.cpp  profile.h  util.h
4brown/1_week/: 1_1_priority_collection_2.cpp  1_2_hash_set.cpp  1_3_set_iterator_next.cpp  1_5_hash_person.cpp  1_6_secondary_index.cpp
4brown/2_week/2_5_restructure/: CMakeLists.txt  main.cpp
4brown/4_week/4_1_textures/: CMakeLists.txt
4brown/final/: input2.json  input_coursera_1.json  input_coursera_2.json
5black/1week/fail_san_sprav/: CMakeLists.txt  transport_router.cpp
5black/1week/sprav_ghi/: CMakeLists.txt  render_settings.cpp  request_base_stop.cpp
5black/3week/interpreter/: CMakeLists.txt  comparators.cpp  comparators.h  mython.cpp  object.cpp  object.h  object_holder.cpp  object_holder.h  runtime_error.cpp  statement.cpp  statement.h
5black/4week/: apply_to_many.cpp  mystery_op.cpp  optional.cpp  optional.h  vector1.h  vector2.h
5black/5week/sprav_r/: .gitignore  CMakeLists.txt  database_queries.proto  example1_make_base.in.json  example1_process_requests.in.json  example1_process_requests.out.json  example1_process_requests2.in.json  example2_make_base.in.json  example2_process_requests.in.json  example2_process_requests.out.json  find_make_base.in.json  find_process_requests.in.json  json.cpp  pages.cpp  pages.h  phone.proto  phones_make_base.in.json  process_and_diff.bat  request.h  request_find.cpp  request_find.h  request_route.cpp  routing_settings.h  sprav.cpp  sprav.h  sprav_impl.cpp  sprav_impl.h  transport_catalog.proto
5black/6week/: CMakeLists.txt  binary_op.cpp  binary_op.h  cell.h  cell_impl.cpp  cell_impl.h  common.h  common_etc.h  exception.h  formula.cpp  formula.h  formula_error.cpp  formula_error.h  formula_impl.cpp  formula_impl.h  formula_node.cpp  formula_node.h  formula_node_part.h  formula_parser.cpp  main.cpp  position.cpp  position.h  profile.cpp  profile.h  set_utils.h  sheet.cpp  sheet.h  sheet_impl.cpp  sheet_impl.h  size.cpp  size.h  unary_op.cpp
5black/6week_authors/: CMakeLists.txt  FormulaAST.cpp  FormulaAST.h  cell.cpp  cell.h  formula.cpp  sheet.cpp  sheet.h  structures.cpp
_cmake_template/: CMakeLists.txt
cpp_belts/: .gitignore
cpp_belts/1white/: 1_3.cpp  1_5.cpp  1_8.cpp  2_10_iezhiemiesiachnyie-diela.cpp  2_11_anaghrammy.cpp  2_12_spravochnik-stolits.cpp  2_13_avtobusnyie-ostanovki-1.cpp  2_14_avtobusnyie-ostanovki-2.cpp  2_17_sinonimy.cpp  2_18_avtobusnyie-ostanovki-3.cpp  2_3_palindrom_filter.cpp  2_5_pieriemieshchieniie-strok.cpp  2_7_razvorot-posliedovatiel-nosti-2.cpp  3_2_sortirovka-biez-uchiota-rieghistra.cpp  3_6_stroka.cpp  3_8_sposoby-initsializatsii.cpp  4_10_iskliuchieniia-v-klassie-rational.cpp  4_11_kal-kuliator-obyknoviennykh-drobiei.cpp  4_12_rabota-s-siervierom-vriemieni.cpp  4_1_struktura-lecturetitle.cpp  4_4_rabota-s-failami_1.cpp  4_4_rabota-s-failami_2.cpp  4_7_spisok-studientov.cpp  4_8_klass-rational_2.cpp  4_8_klass-rational_3.cpp  5_final-naia-zadacha-kursa.cpp  input.txt
cpp_belts/2yellow/: 1_1_summirovaniie-matrits.cpp  1_4_baza-rieghionov.cpp  1_5_triekier-zadach.cpp  1_6_vsio-v-kvadrat.cpp  1_7_ssylka-na-eliemient.cpp  2_3_tiesty-dlia-klassa-person.cpp  4_3_razbiieniie-na-slova.cpp  4_4_udalieniie-povtorov.cpp  4_5_pieriebor-pieriestanovok.cpp  4_6_diemoghrafichieskiie-pokazatieli.cpp  4_7_sortirovka-sliianiiem_2.cpp  4_8_poisk-blizhaishiegho-eliemienta.cpp  4_9_imiena-i-familii.cpp  5_2_otpravka-uviedomlienii.cpp  5_3_nabor-fighur.cpp  5_4_refactor.cpp
cpp_belts/2yellow/6_final/: CMakeLists.txt  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  event.cpp  event.h  stream_utils.h
cpp_belts/4brown/final/: CMakeLists.txt  bus.h  json.cpp  json.h  main.cpp  request.cpp  request.h  sprav.cpp  sprav.h  spravio.cpp  spravio.h  stop.h
cpp_belts/5black/2week/phonebook/: CMakeLists.txt  phone_book.cpp  profile.h
cpp_belts/5black/3week/mython/: CMakeLists.txt  lexer.cpp
react-gameoflife/: package-lock.json  package.json
(+401 files in other folders)
